--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -72,7 +72,7 @@
   </div>
 <div id="price-display" style="position: fixed; top: 20px; right: 20px; background: #fff; padding: 10px; border: 1px solid #ccc; z-index: 20; font-family: monospace;"></div>
 
-<audio id="background-audio" src="intheforest.mp3"></audio>
+<audio id="background-audio" src="intheforest.mp3" loop></audio>
 <img
   id="center-gif"
   src="music-static.png"
