--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -17,6 +17,20 @@
       padding: 20px;
       width: 40%;
     }
+.design-area.light {
+  background-image: url('woodtray-light.png');
+  background-size: 420px 420px;
+  background-position: 8px 24px;
+}
+
+.design-area.dark {
+  background-image: url('woodtray-dark.png');
+  background-size: 430px 430px;
+  background-position: 8px 20px;
+}
+#tray-bg {
+  transition: opacity 0.5s ease;
+}
     #center-thread {
       position: absolute;
       top: 50%;
@@ -38,17 +52,20 @@
     .bead.small.round { width: 30px; height: 30px; border-radius: 50%; }
     .bead.large.round { width: 50px; height: 50px; border-radius: 50%; }
 
-    .design-area {
-      position: relative;
-      width: 400px;
-      height: 400px;
-      border-radius: 50%;
-      margin-left: 20px;
-      background: #f9f9f9;
-      overflow: hidden;
-    }
-    .design-area.light { background: #fff; }
-    .design-area.dark { background: #333; }
+
+.design-area {
+  position: relative;
+  width: 400px;
+  height: 400px;
+
+  background-size: 450px 450px;
+  background-position: 8px 24px;
+  border-radius: 10px;
+  margin-left: 20px;
+  overflow: hidden;
+}
+
+
     .bead-in-design {
       position: absolute;
       transform: translate(-50%, -50%);
@@ -61,7 +78,7 @@
     <button onclick="clearDesignArea()" style="margin-bottom: 10px;">Clean</button>
     <button onclick="toggleBackground()" style="margin-bottom: 10px;">Toggle Background</button>
     <div style="margin-top: 10px;">
-      <input type="number" id="bead-count" value="22" min="1" max="50" />
+      <input type="number" id="bead-count" value="18" min="1" max="50" />
       <button onclick="updateBeadCount()">Set Bead Count & Start</button>
     </div>
     <h3>Bead Library</h3>
@@ -99,7 +116,7 @@
 
 
   <div class="design-area dark" id="design-area" ondragover="event.preventDefault()" ondrop="drop(event)">
-    <div id="center-thread"></div>
+    <!--<div id="center-thread"></div>-->
   </div>
 
   <script>
@@ -255,7 +272,7 @@ function addImageBead(imageURL, size, shape, price = 5.0) {
       let designArea = document.getElementById("design-area");
       let centerX = designArea.clientWidth / 2;
       let centerY = designArea.clientHeight / 2;
-      let radius = 150;
+      let radius = 114;
       let beadWidth = size === "small" ? 30 : 50;
       let beadHeight = beadWidth;
 
@@ -342,16 +359,22 @@ if (imageURL.includes("tocentre")){
       else if (color) addBead(color, size, shape);
     }
 
-    function clearDesignArea() {
-      let designArea = document.getElementById("design-area");
-      let threadHTML = document.getElementById("center-thread").outerHTML;
-      designArea.innerHTML = threadHTML;
-      beadPositions = Array(beadCount).fill(null);
+function clearDesignArea() {
+  const designArea = document.getElementById("design-area");
 
+
+  while (designArea.firstChild) {
+    designArea.removeChild(designArea.firstChild);
+  }
+
+
+  beadPositions = Array(beadCount).fill(null);
   beadCart = {};
   totalPrice = 0;
+
   updatePriceDisplay();
-    }
+}
+
 
     function toggleBackground() {
       let designArea = document.getElementById("design-area");
