--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -89,7 +89,7 @@
     </div>
   </div>
 <div id="price-display" style="position: fixed; top: 20px; right: 20px; background: #fff; padding: 10px; border: 1px solid #ccc; z-index: 20; font-family: monospace;"></div>
-<audio id="drop-sound" src="bead-drop.m4a" preload="auto"></audio>
+<audio id="drop-sound" src="bead-drop.mp3" preload="auto"></audio>
 <div id="music-wrapper" onclick="toggleMusic()" style="
   position: fixed;
   right: 16px;
