--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -18,7 +18,7 @@
       width: 40%;
     }
 .design-area.light {
-  background-image: url('crystaltray-light.png');
+  background-image: url('crystaltray-light.PNG');
   background-size: 420px 420px;
   background-position: 8px 24px;
 }
