--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -146,7 +146,7 @@
 <audio id="background-audio" src="intheforest.mp3" loop></audio>
 
 
-  <div class="design-area dark" id="design-area" ondragover="event.preventDefault()" ondrop="drop(event)">
+  <div class="design-area light" id="design-area" ondragover="event.preventDefault()" ondrop="drop(event)">
     <!--<div id="center-thread"></div>-->
   </div>
 
