--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -277,7 +277,7 @@ function updatePriceDisplay() {
     createImageBead("maple-pendant--tocentre.png", "large", "round", 8.0);
     createImageBead("goldwhitebead-tocentre.png", "large", "round", 8.0);
     createImageBead("goldcircle-tocentre.png", "large", "round", 8.0);
-    createImageBead("heart-pendant-tocentre.png", "large", "round", 10.2);
+    createImageBead("red-heart-pendant-tocentre.png", "large", "round", 10.2);
     function addBead(color, size, shape) {
   if (getFilledBeadCount() >= beadCount) {
     alert("Maximum number of beads reached.");
