--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -269,6 +269,7 @@ function updatePriceDisplay() {
     createImageBead("venus.png", "large", "round", 3.5);
     createImageBead("mars.png", "large", "round", 3.5);
     createImageBead("pink.png", "large", "round", 3.0);
+    createImageBead("whitejade.png", "large", "round", 3.0);
     createImageBead("moonstone.png", "large", "round", 5.2);
     createImageBead("amethyst.png", "large", "round", 5.2);
     createImageBead("goldenobsidian.png", "large", "round", 10.2);
@@ -278,6 +279,7 @@ function updatePriceDisplay() {
     createImageBead("goldwhitebead-tocentre.png", "large", "round", 8.0);
     createImageBead("goldcircle-tocentre.png", "large", "round", 8.0);
     createImageBead("red-heart-pendant-tocentre.png", "large", "round", 10.2);
+
     function addBead(color, size, shape) {
   if (getFilledBeadCount() >= beadCount) {
     alert("Maximum number of beads reached.");
