--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -272,6 +272,11 @@ function updatePriceDisplay() {
     createImageBead("whitejade.png", "large", "round", 3.0);
     createImageBead("moonstone.png", "large", "round", 5.2);
     createImageBead("amethyst.png", "large", "round", 5.2);
+    createImageBead("orange-agate.png", "large", "round", 5.8);
+    createImageBead("red-agate.png", "large", "round", 5.8);
+    createImageBead("white-agate.png", "large", "round", 3.8);
+    createImageBead("red-c-agate.png", "large", "round", 3.8);
+    createImageBead("pearl-large.png", "large", "round", 3.8);
     createImageBead("goldenobsidian.png", "large", "round", 10.2);
     createImageBead("bodhi.png", "large", "round", 5.2);
     createImageBead("silvercircle-tocentre.png", "large", "round", 5.2);
