--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -277,8 +277,13 @@ function updatePriceDisplay() {
     createImageBead("white-agate.png", "large", "round", 3.8);
     createImageBead("red-c-agate.png", "large", "round", 3.8);
     createImageBead("pearl-large.png", "large", "round", 3.8);
+    createImageBead("howlite.png", "large", "round", 1.0);
+    createImageBead("lava-stone.png", "large", "round", 5.8);
+    createImageBead("green-rutilated-quartz.png", "large", "round", 8.8);
     createImageBead("goldenobsidian.png", "large", "round", 10.2);
     createImageBead("bodhi.png", "large", "round", 5.2);
+    createImageBead("silver-ball.png", "large", "round", 20.2);
+    createImageBead("silver-filigree-bead.png", "large", "round", 9.2);
     createImageBead("silvercircle-tocentre.png", "large", "round", 5.2);
     createImageBead("maple-pendant--tocentre.png", "large", "round", 8.0);
     createImageBead("goldwhitebead-tocentre.png", "large", "round", 8.0);
