--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -8,7 +8,8 @@
     body {
       font-family: Arial, sans-serif;
       display: flex;
-      justify-content: flex-start;
+
+      justify-content: center;
       padding: 20px;
     }
     .bead-library,
@@ -87,8 +88,10 @@
     <div id="library"></div>
 
     <div style="margin-top: 10px; padding: 10px; border-top: 1px solid #ccc;">
-      <p>This is a desktop-only web tool. Please use a larger screen for the best experience.</p>
+      <p>Please use a larger screen for the best experience.</p>
     </div>
+
+
   </div>
 <div id="price-panel-wrapper" style="position: fixed; top: 20px; right: 0; height: 60vh; z-index: 20; display: flex; align-items: flex-start; transition: transform 0.3s ease;">
   <!-- handle -->
