--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -60,6 +60,57 @@
     .bead.small.round { width: 30px; height: 30px; border-radius: 50%; }
     .bead.large.round { width: 50px; height: 50px; border-radius: 50%; }
 
+@media (max-width: 768px) {
+  #main-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 16px;
+  }
+  .bead-library,
+  .design-area {
+    width: 90vw;
+    max-width: 380px;
+    padding: 12px;
+  }
+  .design-area {
+    height: 360px;
+    background-size: 100% auto;
+    background-position: center;
+  }
+  #music-wrapper {
+    right: 50%;
+    transform: translateX(50%);
+    bottom: 20px;
+  }
+  #price-panel-wrapper {
+    top: auto;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 180px;
+    flex-direction: row-reverse;
+    align-items: center;
+    box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
+  }
+  #price-toggle-handle {
+    height: 100%;
+    width: 20px;
+    border-radius: 4px 0 0 4px;
+  }
+  #price-display {
+    font-size: 12px;
+    overflow-y: scroll;
+    height: 100%;
+    width: calc(100% - 20px);
+  }
+  #zoom-wrapper {
+    transform-origin: top center;
+  }
+  #main-container {
+    padding-bottom: 100px;
+  }
+}
 
 .design-area {
   position: relative;
