--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -63,54 +63,20 @@
 @media (max-width: 768px) {
   #main-container {
     flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 16px;
   }
+
   .bead-library,
   .design-area {
-    width: 90vw;
-    max-width: 380px;
-    padding: 12px;
-  }
-  .design-area {
-    height: 360px;
-    background-size: 100% auto;
-    background-position: center;
-  }
-  #music-wrapper {
-    right: 50%;
-    transform: translateX(50%);
-    bottom: 20px;
-  }
-  #price-panel-wrapper {
-    top: auto;
-    bottom: 0;
-    right: 0;
     width: 100%;
-    height: 180px;
-    flex-direction: row-reverse;
-    align-items: center;
-    box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
   }
-  #price-toggle-handle {
-    height: 100%;
-    width: 20px;
-    border-radius: 4px 0 0 4px;
-  }
-  #price-display {
-    font-size: 12px;
-    overflow-y: scroll;
-    height: 100%;
-    width: calc(100% - 20px);
-  }
-  #zoom-wrapper {
-    transform-origin: top center;
-  }
-  #main-container {
-    padding-bottom: 100px;
+
+  #music-wrapper {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
   }
 }
+
 
 .design-area {
   position: relative;
@@ -158,8 +124,9 @@
 
     </div>
   <div class="design-area light" id="design-area" ondragover="event.preventDefault()" ondrop="drop(event)">
+
   </div>
-<div id="music-wrapper" onclick="toggleMusic()" style="
+  <div id="music-wrapper" onclick="toggleMusic()" style="
   position: fixed;
   right: 16px;
   top: 350px;
@@ -185,7 +152,9 @@
     pointer-events: none;
   ">Music?<br/></div>
 </div>
-  </div>
+
+</div>
+
 
 
 
