--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -63,6 +63,7 @@
     .circle-frame {
       width: 420px;
       height: 420px;
+      margin-top: -150px;
       border-radius: 50%;
       overflow: hidden;
       box-shadow: 0 0 20px rgba(255,255,255,0.2);
