--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -59,7 +59,7 @@
   background: #666;
 }
 .design-area.dark {
-  background-image: url('jadetray-light.PNG');
+  background-image: url('jadetray.png');
 
 }
 #tray-bg {
