--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -250,7 +250,7 @@ button:hover {
 
 
     </div>
-  <div class="design-area light" id="design-area" ondragover="event.preventDefault()" ondrop="drop(event)">
+  <div class="design-area dark" id="design-area" ondragover="event.preventDefault()" ondrop="drop(event)">
 
   </div>
   <div id="music-wrapper" onclick="toggleMusic()" style="
