--- a/custom-bracelets.html
+++ b/custom-bracelets.html
@@ -246,11 +246,12 @@ button:hover {
 
     <div style="margin-top: 10px; padding: 10px; border-top: 1px solid #ccc;">
       <p>Please use a larger screen for the best experience.</p>
+      <p>Click a bead to add it to the tray. Double-click a bead on the tray to remove it.</p>
     </div>
 
 
     </div>
-  <div class="design-area dark" id="design-area" ondragover="event.preventDefault()" ondrop="drop(event)">
+  <div class="design-area light" id="design-area" ondragover="event.preventDefault()" ondrop="drop(event)">
 
   </div>
   <div id="music-wrapper" onclick="toggleMusic()" style="
